old-code/kubernetes/cluster-home/apps/networking/services-home/app/fullrelease.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: analytics-service
    namespace: networking
spec:
    ports:
        - name: web
          protocol: TCP
          port: 8001
          targetPort: 8001
    type: ExternalName
    sessionAffinity: None
    externalName: ENC[AES256_GCM,data:68fUA+jTdKKZf6u4YQ==,iv:sHljF7m2DuRAHVCyPnxJshi+qenypqZswO/hcEqblKM=,tag:XTbvFW52umfUNvTtEC6fiQ==,type:str]
    internalTrafficPolicy: Cluster
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: v1
kind: Service
metadata:
    name: flows-service
    namespace: networking
spec:
    ports:
        - name: web
          protocol: TCP
          port: 8080
          targetPort: 8080
    type: ExternalName
    sessionAffinity: None
    externalName: ENC[AES256_GCM,data:vSWIS9CKLJhWYmStBA==,iv:Z7T7pGgmKKJgxDZscoEcgumVQkFvgizCWQPJ5AEQjAk=,tag:snC92vYTwXnrtpKOH/nnUw==,type:str]
    internalTrafficPolicy: Cluster
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: v1
kind: Service
metadata:
    name: home-service
    namespace: networking
spec:
    ports:
        - name: web
          protocol: TCP
          port: 8123
          targetPort: 8123
    type: ExternalName
    sessionAffinity: None
    externalName: ENC[AES256_GCM,data:AEdE0oWaMCmDbWA=,iv:R1fJHkPtXEgsrcbi6h8x46F/FSWJ+jVqht11qtk19Xk=,tag:llX8UWVA2gIZrXPRIq2c0w==,type:str]
    internalTrafficPolicy: Cluster
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: v1
kind: Service
metadata:
    name: gitlab-service
    namespace: networking
spec:
    ports:
        - protocol: TCP
          name: web
          port: 6080
          targetPort: 6080
        - protocol: TCP
          name: registry
          port: 5005
          targetPort: 5005
        - protocol: TCP
          name: ssh
          port: 9222
          targetPort: 9222
    type: ExternalName
    sessionAffinity: None
    externalName: ENC[AES256_GCM,data:KE/AtCp5ebZCw23uxw==,iv:LLzg763LclFXPofosx8wQG6cY1dShK4JNFA5RK0twPo=,tag:9E9gZazZoWy6ybA/XlDlCA==,type:str]
    internalTrafficPolicy: Cluster
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: gitlab-ingress
    namespace: networking
    annotations:
        external-dns.alpha.kubernetes.io/target: ingress.dxas90.xyz
        cert-manager.io/cluster-issuer: letsencrypt-production
        ingress.kubernetes.io/proxy-body-size: "0"
        ingress.kubernetes.io/ssl-redirect: "true"
        kubernetes.io/tls-acme: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
    labels:
        use-http01-solver: "true"
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:Q65JcRLWuV+og4HJPbW5S84=,iv:1F+N5CyAUMJlMPAdtNuvwKoGP03AOgS/HwYeWQb02fM=,tag:podNBxdjHLG3TXIGQdna+g==,type:str]
          secretName: ENC[AES256_GCM,data:9qU6TL6ESa/Pl49KCGbPSZzTB233XA==,iv:51bhDHafOBVlRt2pDJnc/bgsd09uwqbT9SsvX5BJaNE=,tag:MmaV6U33dhIMhbAJaMPeyw==,type:str]
        - hosts:
            - ENC[AES256_GCM,data:etv4bBvbTuC4FuScSvDnMihEwQ==,iv:hd+g+ABxa1eeyXBzbndBmltzo5LhStzvHBMe2r7UzOs=,tag:tE5sxVo04P8Tog3cfTgxDw==,type:str]
          secretName: ENC[AES256_GCM,data:Tt6JKv4dyyEWnsExY7vrJnauZvgUmKGFkb7wfJKEJQ==,iv:W8rwmkYpm5hIUnQl+yex5aX5VpmrKAPK/UNreomBeVc=,tag:VxhyhV4df0OSOpu6zyh9sg==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:+/BvckNwGb/nksVCyMZrHa4=,iv:/fplevFgITtVCjZcqJSWOmOu24WFvSDpt9Z0o6NImSA=,tag:sxK8XlaCJ0/2/smKuTcpAg==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:Fw==,iv:If3YpP/ZoDTsuRzehMlxGO3gXbYsCTDd/WVchvphtTE=,tag:X7EsdgJctsI/ivusaY3rrA==,type:str]
                  pathType: ENC[AES256_GCM,data:1J5Svx4m,iv:tVSeqW0sRHGA+lTWwpfqtfCKs9R2hu9+DA+pQVCNaLM=,tag:AsVaFLwwLX1rDUE3vcd3Vw==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:OhccGNPFRwEZigpYThA=,iv:uaPufdxUkDA4cXmCbJMv/ZOvOoAXXMaElNf8nQJejrM=,tag:qNLY2PpGqHMrk9WqVkW6uQ==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:GKY0Qw==,iv:u2uqUEQZ2pDIB8IIKrDIn8Drz9C4ZuyVd97opnKypMc=,tag:KtRdtjthiLUb7/boZeWizQ==,type:int]
        - host: ENC[AES256_GCM,data:vf+4rsMNyF9xwBErst47Z/hHnw==,iv:2thiZjeSF0B8JanJ1DusxVYYWlEQqbnZExvQGHMuRHI=,tag:Sm++C6NZhZozkoKjdKvsMg==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:7g==,iv:RgCHAEEzKFsNrYa6rLGxhtSlyaHQdYaf//Pz36qjj/U=,tag:OapIRWM/90PxikwsBD6wsA==,type:str]
                  pathType: ENC[AES256_GCM,data:KAIsI2cY,iv:iICvH+W1KA+ceoWts6O4EvpfBNJ7bZ4uR/bwf1HfaAQ=,tag:9/jI9W0KyJQ38ksgNV7seA==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:h8bjRkDWnPnzT2mpYsg=,iv:LYvpas33t0ix4A6M5pRFcbcuKhXU3JWfdqh5X9qsGvo=,tag:oS52dWpnV89U6PgcZMyApw==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:zfzGpA==,iv:bbGTFQgXGZCj84eA+Kgs2jKNSBGZ+kNJV+dzR6dhImY=,tag:j1/jyLZivecCrXpQscjroA==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: home-ingress
    namespace: networking
    annotations:
        external-dns.alpha.kubernetes.io/target: ingress.dxas90.xyz
        cert-manager.io/cluster-issuer: letsencrypt-production
        ingress.kubernetes.io/proxy-body-size: "0"
        ingress.kubernetes.io/ssl-redirect: "true"
        konghq.com/override: https-only
        kubernetes.io/tls-acme: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: networking-secured@kubernetescrd
    labels:
        use-http01-solver: "true"
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:C1MlqB62lzvU80RcDAj5,iv:B7n18oew9PF8jd5JWyAenth/vbOd90Ngy23Hn+dKpl4=,tag:D3lNyebbuxat3dgIwAZ23w==,type:str]
          secretName: ENC[AES256_GCM,data:vw+RvCY5yYsITpqp5Sq1Sc8G6aU=,iv:rykSFv6/uLawQquyfwKqog7EDjhwFc86O4vX1z/okDo=,tag:GBqu3OpGG3Y4rbc/O8yJww==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:Run1gEU6XEKKp1G2q/z+,iv:JRDhreXi3mxeStBNShZeuNXhxnADLkcc+fhAb8n7sj4=,tag:pOdnummxJxRMAKjcRcK4Iw==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:PQ==,iv:5N9ewwEAwpoYK9og/wmA1it+8R3MCcqvU/tlso7v+Vk=,tag:YCJT63p4SFbmUejciTaxdg==,type:str]
                  pathType: ENC[AES256_GCM,data:pUlTaJBp0z7kAjFGR6F8pEO5TvmdeA==,iv:qmvWBHRkMP0ear2YRtJoW1q8R+Qv0d/6u3CJlMk/yGo=,tag:XnOLWuVAf7H5RLQezPCkEQ==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:XEtvSfhqEUCOWAbO,iv:A3pNqy6E4E53mAPGr2PjpQlQdJlCmBwfVFSbnq0E5EI=,tag:GArRFZpyMIz9ZG3dzBjCOw==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:Drswvw==,iv:tyT+YJvPAWDU5E+/8PuiaaIMfCrjrL0TETiRpsqCsuQ=,tag:zogfOT9rP6iF9iAUfo7UQg==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: analytics-ingress
    namespace: networking
    annotations:
        external-dns.alpha.kubernetes.io/target: ingress.dxas90.xyz
        cert-manager.io/cluster-issuer: letsencrypt-production
        ingress.kubernetes.io/proxy-body-size: "0"
        ingress.kubernetes.io/ssl-redirect: "true"
        konghq.com/override: https-only
        kubernetes.io/tls-acme: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
    labels:
        use-http01-solver: "true"
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:e33/91usXcbxX0+W6K11MOJOHWE=,iv:hvo58/NSwlcz8Mr287HfK8wsB9qbRn6NP6ZcQWHAbR0=,tag:undoFmpEvwjUnyvc/6nbZA==,type:str]
          secretName: ENC[AES256_GCM,data:Wy1uEpp8K+9+V02krksDouCyKWxeOhyp3A==,iv:up8bpxRt9NqYizdrHZItqDoilfIIGAF4ApttoqCfWf8=,tag:O7XBPiGy7s0nnQbiTamm2A==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:GTga+a1lmcntN9L+PWPnsCm7cdk=,iv:RO5IhQ8xtQEVbexAlR7mhxZ3yqJzqBfdQNRj4rmXBW4=,tag:fpAOKtQ+z5vNT/grq2PBxA==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:fg==,iv:Zr62T5+lhnNmXmhTqHhu+vPounmfYRhNH5EUGnOft0E=,tag:FGJyoFNxRhX4jlaSuIlE9g==,type:str]
                  pathType: ENC[AES256_GCM,data:tp85RrJtG44WcmMebBCKtoQfHtSo/g==,iv:67GGqFz7EielSWiv+ldoVtX93+2z0mzKQfmFZborsdQ=,tag:WlgvPhHoXm9E/+43Z0/Q6Q==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:d4j0dZbos2d3UldoNMApo2U=,iv:xwRWLln/3HeG3ax4moQPwdoKxtCfFxd5mEgsT+gVHUI=,tag:abEzFlEYYn6luPV29awjHQ==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:WuDofw==,iv:dD35qACfcasuUgD6uwAGftnOL8+O5MpS67o69pLx93Y=,tag:fQktwCB6XaqXqUZCRS7z5Q==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: flows-ingress
    namespace: networking
    annotations:
        external-dns.alpha.kubernetes.io/target: ingress.dxas90.xyz
        cert-manager.io/cluster-issuer: letsencrypt-production
        ingress.kubernetes.io/proxy-body-size: "0"
        ingress.kubernetes.io/ssl-redirect: "true"
        konghq.com/override: https-only
        kubernetes.io/tls-acme: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
    labels:
        use-http01-solver: "true"
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:nE8BK4ew9L5mby7nhy4JmQ==,iv:sHSozKOD4uD+S7p6EYVRkTjebW20pM0loPY75eVL3A0=,tag:Qi5K2EKgrN6N6tmAcXl5bg==,type:str]
          secretName: ENC[AES256_GCM,data:CQkKlll59ZdPaDIr9V+Tp/O7lxp9,iv:ECjVQlcAMtMotcQuqGgorYYzm+8BgjTV9f/FOmosqEg=,tag:ljRTtkelPUB66JKp6MZ8Iw==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:qpMfaFao7RU6E4lxKi1CcA==,iv:BRNFbMrYgkIIfSVXcppwL3G3y091JfVUVPJA5rpyUXY=,tag:zpRmyDjZTVZCnZOKKqpDMw==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:9w==,iv:JZm2nePZyajrpbXaRlQNUJLQLCwFVGxrLEdFRY+PFz8=,tag:YTlJGHlBZARWrIKCGwtOAA==,type:str]
                  pathType: ENC[AES256_GCM,data:uc4/Q/O/EhqixBvbDFaLdljWfoFxKw==,iv:7Pwv0krBn3vSKPMy9fQrDyjaxj+GkiAW1KBeYvnEIvo=,tag:5ipQT10eNDeGid8sTFpJ2A==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:dVuAxVdaF0uNnTtttg==,iv:CWgJMeB/wQHxmh8vNAwwBG5EPCJ9qi2x8vUNSM+WCDM=,tag:Tp1kX/4WtQSUZx39C/NEqA==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:qzZHQg==,iv:+vznl9+c7XBCMOif+eP+PW3jNcFjml8pYmZV+EjP3bg=,tag:yvMFGD/HRBe8IIj0728FKQ==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: home-dxas90-xyz-redirect
    namespace: networking
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web
        traefik.ingress.kubernetes.io/router.middlewares: networking-secured@kubernetescrd
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:heqGyQ84MqOFT48WA8db,iv:V3B+Pj5PWSZ279ogcoimbD4c0LkhQdqGzN090taoDfY=,tag:KLGpqxWxjVpEkYahsMo7wQ==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:XQ==,iv:WTmhy607lSm2F1+5bVbDrRjhwiaVvpEP3ep05uaEFSw=,tag:GK/bbzPdjf99hVEx2D/M2w==,type:str]
                  pathType: ENC[AES256_GCM,data:Y6Y1o76alF/2kGhdD5Ur4aMMbSC0pA==,iv:aRGe4wOHbuJbNdQEW6igmwMJIyLywZarxxsiZygYu9s=,tag:5QlNTbOYD2hyIl3j/BXFig==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:75jFJB6NsBAOkvS2,iv:Y5Rz3bnalRyupeii0JvbHhJlVV47l+RgXernzGcswIA=,tag:nF41sFt6m6rn0vutZ9S0tg==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:Fx4qsw==,iv:giYLukqoQFSY2Ac1e1UKKeiYMAlehHnKQngsb1pAd4k=,tag:JyKIbGpNRbmvKnox9SNDGQ==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: analytics-dxas90-xyz-redirect
    namespace: networking
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web
        traefik.ingress.kubernetes.io/router.middlewares: networking-secured@kubernetescrd
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:PyOk04bxuWjNx80e/A7i4IR176w=,iv:qjxk2XfWiyOi/yz4g6GzWI675ohOIgzYY+iN+fo5Zb4=,tag:oA7/9SVmfZqdv/jTS7CcNQ==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:kg==,iv:r1n3KtSdoYShl31LeXy2bGJYnecizm1p9zYzQBrywtw=,tag:dmVpcuIsQFno4XdNCZxiCQ==,type:str]
                  pathType: ENC[AES256_GCM,data:DV/EBYrO6DGJY8RPK6PrFXiqoWo03Q==,iv:nertxE887NO63FdSV1PewXS2fC7Uk9BP26pbJ8dCROw=,tag:WfnFP9BJxjKIy/MOm1sJ9w==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:TPqEQFdXJxLjJARSz/AHFK0=,iv:c4s2Zqyeqy7Tv6h+Hs6dLIQOHNM05/+Kv4sMLDmrUag=,tag:Az1JWdOkh/HnsfxhX8Ya5w==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:rJnwYQ==,iv:iJ0S1qvihUjVulU1xrJss73na5d+52esAZILsPua41o=,tag:N9ybjtVbMIOT0jULhjpMCw==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: flows-dxas90-xyz-redirect
    namespace: networking
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web
        traefik.ingress.kubernetes.io/router.middlewares: networking-secured@kubernetescrd
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:xFXvFLt+Iox4OVG4x4XyDQ==,iv:dGfgdHT+a8x13C9UkznBC2s7y9GCK4EB26O+YHVykuQ=,tag:Jgc1BHkgJKRphg3O+tR7lw==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:dA==,iv:+U003/3n7TYKOpSm04ZYnsaA6LOZJuhOzXHB4V+inLs=,tag:t6RZtxPd1R44zMG/h1DaEQ==,type:str]
                  pathType: ENC[AES256_GCM,data:tE5v2T042tUsB7UAUPipP8+4uPi1nA==,iv:b+Os4MlsH1GlVZIEb+EdujQ5ikDiNX1mHkd8UhWR5lY=,tag:nKw66YAbSoatWK8RbgRBCg==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:ZrCr1RpZNMdskksqsA==,iv:cknYB0qLADdAVxXbA7V/nua0FIl+BUk+PZ+Ab91Huws=,tag:HhXhUUOgTWT1eVethCK8wQ==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:eSQSzA==,iv:JuuzchCwRWGQxz5+E7Tq5I4Yj5QLCim2Q4LIXQsE8W4=,tag:qvjP3EUE8BQYnAb8fPu0ww==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
# Redirect to https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: web-redirect
    namespace: networking
spec:
    redirectScheme:
        scheme: https
        permanent: true
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
# Latency Check
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: latency-check
    namespace: networking
spec:
    circuitBreaker:
        expression: LatencyAtQuantileMS(50.0) > 100
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
# Enable gzip compression
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: compress
    namespace: networking
spec:
    compress: {}
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
# Here, an average of 100 requests per second is allowed.
# In addition, a burst of 50 requests is allowed.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: ratelimit
    namespace: networking
spec:
    rateLimit:
        average: 100
        burst: 50
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: custom-headers
    namespace: networking
spec:
    headers:
        customRequestHeaders:
            X-Script-Name: test
            X-Forwarded-Proto: https
        customResponseHeaders:
            X-Custom-Response-Header: value
            X-Forwarded-Proto: https
        hostsProxyHeaders:
            - X-Forwarded-For
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: secured
    namespace: networking
spec:
    chain:
        middlewares:
            - name: web-redirect
            - name: latency-check
            - name: compress
            - name: ratelimit
            - name: custom-headers
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17nr093c37k5732q9ksxf2p785wd9fxjej7axzcn66lm6muys0eks9kmzts
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y2JqSGcxaVk5bWlKNzNS
[...]
            s21pZwIJQrSGzyvtepuVZMmANdnmIwOJUnVQFIXAdDXJTL7tjOQmog==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-08-27T18:42:04Z"
    mac: ENC[AES256_GCM,data:bo23Cf5lio7rB8v5NgPLiSt2voZzpsR4eJE8G4JzmpBcyp1OLFDgt+KGSgEVQ6v3WOH5oQ/hM/M3GC/am+xvlhk7T9cbIP/uKo7D5NTetQ1P3HEzffAiM4BD2wzZ/ZLEOF2kujIekUhQB5dGonLSQ1gihZTMbS7ty9p7X9Euq8s=,iv:DrIRKSzjjdflfkxSLYVISwKnj5oVudllBjz329VWlb0=,tag:HMpJ8ppCgadOFwW7+wjPdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|externalName|tls|rules|value|key)$
    version: 3.7.3
